fixes the chief complaints alignment

--- a/src/app/dashboard/visit-summary/visit-summary.component.scss
+++ b/src/app/dashboard/visit-summary/visit-summary.component.scss
@@ -202,7 +202,7 @@
     }
 
     .list-item-content {
-      padding: 5px 0px;
+      padding: 5px 20px;
     }
   }
 
