--- a/src/app/modal-components/view-visit-summary/view-visit-summary.component.scss
+++ b/src/app/modal-components/view-visit-summary/view-visit-summary.component.scss
@@ -139,7 +139,7 @@
     }
 
     .list-item-content {
-      padding: 5px 0px;
+      padding: 5px 20px;
     }
   }
 
